--- a/client/view/commentsList.html
+++ b/client/view/commentsList.html
@@ -4,6 +4,7 @@
       {{#if comments}}
       Comments
       {{else}}
+      <span class="glyphicon glyphicon-comment"></span>
       No comment yet, be the first to insert a comment!
       {{/if}}
     </div>
