--- a/client/main.css
+++ b/client/main.css
@@ -1,6 +1,40 @@
 /* CSS declarations go here */
-.hidden_div{
+.navbar-brand img {
+    -webkit-transition: all 0.7s ease; /* Safari and Chrome */
+    -moz-transition: all 0.7s ease; /* Firefox */
+    -ms-transition: all 0.7s ease; /* IE 9 */
+    -o-transition: all 0.7s ease; /* Opera */
+    transition: all 0.7s ease;
+}
+
+.navbar-brand:hover img {
+    -webkit-transform:scale(1.10); /* Safari and Chrome */
+    -moz-transform:scale(1.10); /* Firefox */
+    -ms-transform:scale(1.10); /* IE 9 */
+    -o-transform:scale(1.10); /* Opera */
+     transform:scale(1.10);
+}
+
+#website_form{
 	display:none;
+	position: fixed;
+	width: 100%;
+	max-width: 350px;
+	height: 200px;
+	z-index: 9999;
+	top: 50%;
+	left: 50%;
+	margin-top: -100px;
+	margin-left: -175px;
+}
+
+#website_form_overlay{
+	background: rgba(0,0,0,0.7);
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	display:none;
+	z-index: 9999;
 }
 
 .alert{
@@ -14,4 +48,15 @@
 
 .navbar-brand{
 	padding: 0px;
+}
+
+a#login-sign-in-link,a#login-name-link {
+	text-decoration: none;
+	background-color: #337ab7;
+	border-color: #2e6da4;
+	color: #fff;
+	padding: .75rem 1.25rem;
+  font-size: 1.25rem;
+  line-height: 1.333333;
+  border-radius: .3rem;
 }
