--- a/client/view/_navbar.html
+++ b/client/view/_navbar.html
@@ -8,16 +8,19 @@
     </div>
 
     <ul class="nav navbar-nav ">
-          <li>
-            <a href="/">home</a>
-          </li>
 
           <form class="navbar-form navbar-left js-search-form" role="search" >
             <div class="form-group">
               <input type="text" id="q" class="form-control" placeholder="Search" value="{{getParams.q}}">
             </div>
-            <button type="submit" class="btn btn-default js-search">Submit</button>
+            <button type="submit" class="btn btn-primary js-search">
+              <span class="glyphicon glyphicon-search"></span>
+            </button>
           </form>
+
+          <li>
+            <a href="/">Home</a>
+          </li>
 
           <li style="padding-top:15px;">
             {{> loginButtons}}
