add 404 images for missing websites id

--- a/client/view/notFound.html
+++ b/client/view/notFound.html
@@ -1,5 +1,7 @@
-
-<template name="notFound">
-  notFound
+<template name="not_found">
+  <div class="jumbotron text-center">
+    <h1>Not Found!</h1>
+    <img src="/404_img1.png">
+  </div>
 
 </template>
